--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,7 +37,7 @@ about:
   home: "http://github.com/plotly/dash-bio"
   license: "MIT"
   license_family: "MIT"
-  license_file: "LICENSE"
+  license_url: "https://github.com/plotly/dash-bio/blob/v0.2.0/LICENSE"
   summary: "dash_bio"
   description: |
     Dash Bio is a suite of bioinformatics components built to work with Dash.
